--- a/app/globals.css
+++ b/app/globals.css
@@ -294,3 +294,13 @@
   transform: scale(1.05);
   transition: opacity 700ms ease-in-out, transform 700ms ease-in-out;
 }
+
+@media screen and (min-width: 2560px) {
+  html { font-size: 18px; }
+  :root { --radius: 0.9rem; }
+}
+
+@media screen and (min-width: 3840px) {
+  html { font-size: 20px; }
+  :root { --radius: 1rem; --spacing: 0.375rem; }
+}
